test/lit/vpto/vrelu_verify_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: ! ptoas --pto-arch=a5 --pto-backend=vpto %s 2>&1 | FileCheck %s

// Negative tests for pto.vrelu verifier.
//
// CHECK: error: 'pto.vrelu' op requires si32/i32/f16/f32 vector element type

func.func @vrelu_bf16_invalid(%src: !pto.ptr<bf16, ub>, %dst: !pto.ptr<bf16, ub>)
    {
  %c0 = arith.constant 0 : index
  pto.vecscope {
    %mask = pto.pset_b16 "PAT_ALL" : !pto.mask<b16>
    %vec = pto.vlds %src[%c0] : !pto.ptr<bf16, ub> -> !pto.vreg<128xbf16>
    %out = pto.vrelu %vec, %mask : !pto.vreg<128xbf16>, !pto.mask<b16> -> !pto.vreg<128xbf16>
    pto.vsts %out, %dst[%c0], %mask : !pto.vreg<128xbf16>, !pto.ptr<bf16, ub>, !pto.mask<b16>
  }
  return
}
